--- a/src/components/CardMenu/CardMenu.module.css
+++ b/src/components/CardMenu/CardMenu.module.css
@@ -10,6 +10,19 @@
   padding: 16px;
   border-radius: 10px;
   box-shadow: 0 6px 20px rgba(0, 0, 0, 0.25);
+
+  animation: scaleIn 0.2s ease forwards;
+}
+
+@keyframes scaleIn {
+  from {
+    transform: scale(0);
+    opacity: 0;
+  }
+  to {
+    transform: scale(1);
+    opacity: 1;
+  }
 }
 
 button {
