--- a/src/components/CardMenu/CardMenu.module.css
+++ b/src/components/CardMenu/CardMenu.module.css
@@ -6,10 +6,13 @@
   justify-content: space-between;
   column-gap: 15px;
 
-  background: var(--accent-color);
+  background: #ffbbe1;
   padding: 16px;
   border-radius: 10px;
-  box-shadow: 0 6px 20px rgba(0, 0, 0, 0.25);
+  border: 1px solid rgba(0, 0, 0, 0.08);
+  box-shadow:
+    0 10px 25px rgba(0, 0, 0, 0.08),
+    0 2px 5px rgba(0, 0, 0, 0.04);
 
   animation: scaleIn 0.2s ease forwards;
 }
@@ -37,5 +40,5 @@ button {
   display: flex;
   align-items: center;
   justify-content: center;
-  color: var(--accent-color);
+  color: #ffbbe1;
 }
