--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -37,17 +37,42 @@ body {
   transform: translateZ(0);
   contain: layout paint;
 }
+.title-wrapper {
+  display: flex;
+  justify-content: center;
+}
 
-.title {
+.title-input {
+  height: 120px;
   text-transform: uppercase;
-  margin-bottom: 30px;
   font-size: 85px;
   font-weight: 800;
   text-align: center;
-  user-select: none;
+  font-family: 'Jost', sans-serif;
+
+  border: none;
+  outline: none;
+  background: transparent;
+
+  color: var(--accent-color);
+
+  transition: opacity 0.2s ease;
+}
+
+/* Когда НЕ редактируем */
+.title-input.readonly {
+  pointer-events: none;
+  caret-color: transparent;
+}
+
+/* В режиме редактирования */
+.title-input.editing {
+  pointer-events: auto;
+  caret-color: var(--accent-color);
 }
 
 .cards-grid {
+  margin-top: 20px;
   display: grid;
   flex: 1;
   gap: 20px;
@@ -112,8 +137,6 @@ body {
   justify-content: center;
 
   background-color: transparent;
-  border: 2px solid var(--accent-color);
-  border-radius: 5px;
 
   backface-visibility: hidden;
   transform-style: preserve-3d;
@@ -156,11 +179,9 @@ body {
 
   background: #fff;
   border-radius: 16px;
-  border: 1px solid rgba(0, 0, 0, 0.08);
+  border: 2px solid rgba(0, 0, 0, 0.03);
 
-  box-shadow:
-    0 10px 25px rgba(0, 0, 0, 0.08),
-    0 2px 5px rgba(0, 0, 0, 0.04);
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
 
 .flip-card-text input::placeholder {
@@ -239,9 +260,25 @@ body {
 .flip-card-body {
   background: #fff;
   border-radius: 16px;
-  border: 1px solid rgba(0, 0, 0, 0.08);
+  border: 5px solid rgba(0, 0, 0, 0.02);
 
-  box-shadow:
-    0 10px 25px rgba(0, 0, 0, 0.08),
-    0 2px 5px rgba(0, 0, 0, 0.04);
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+}
+
+.flip-card-plus-pulse {
+  width: 100%;
+  height: 100%;
+  animation: pulse 1.5s infinite ease-in-out;
+}
+
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.02);
+  }
+  100% {
+    transform: scale(1);
+  }
 }
