--- a/src/components/CardMenu/CardMenu.module.css
+++ b/src/components/CardMenu/CardMenu.module.css
@@ -4,15 +4,15 @@
 
   display: flex;
   justify-content: space-between;
-  column-gap: 12px;
+  column-gap: 15px;
 
-  background: #ffbbe1;
+  background: teal;
   padding: 10px;
   border-radius: 10px;
   border: 2px solid rgba(0, 0, 0, 0.02);
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 
-  animation: scaleIn 0.2s ease forwards;
+  animation: scaleIn 0.3s ease forwards;
 }
 
 @keyframes scaleIn {
@@ -38,7 +38,7 @@ button {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 40px;
+  width: 55px;
   aspect-ratio: 1;
   color: #ffbbe1;
 }
