--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -22,8 +22,8 @@ body {
   flex-direction: column;
   width: 1366px;
   height: 1024px;
-  padding: 40px;
-  background: #ffbbe1;
+  padding: 30px;
+  background-color: teal;
 }
 
 .global-overlay {
@@ -54,7 +54,7 @@ body {
   outline: none;
   background: transparent;
 
-  color: var(--accent-color);
+  color: white;
 
   transition: opacity 0.2s ease;
 }
@@ -72,12 +72,14 @@ body {
 }
 
 .cards-grid {
-  margin-top: 20px;
+  width: 100%;
+  height: 100%;
+  margin-top: 30px;
   display: grid;
   flex: 1;
   gap: 20px;
-  grid-template-columns: repeat(5, 1fr);
-  grid-template-rows: repeat(5, 1fr);
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(4, 1fr);
 }
 
 /* =====================================
@@ -101,7 +103,7 @@ body {
    🔁 4. FLIP-CARD BASE
 ===================================== */
 .flip-card {
-  position: relative;
+  /*position: relative;*/
   width: 100%;
   height: 100%;
   perspective: 1000px;
@@ -221,11 +223,11 @@ body {
 }
 
 .flip-card-body:active {
-  transform: scale(0.9);
+  transform: scale(0.93);
 }
 
 .flip-card-description {
-  font-size: 16px;
+  font-size: 18px;
   font-weight: 600;
   text-align: center;
 
