--- a/src/components/Card/Surface/CardSurface.module.css
+++ b/src/components/Card/Surface/CardSurface.module.css
@@ -1,4 +1,4 @@
-.base {
+.surface {
   position: absolute;
   inset: 0;
   padding: 20px;
@@ -10,7 +10,7 @@
   background: #fff;
   border-radius: 16px;
   border: 6px solid rgba(0, 0, 0, 0.05);
-  box-shadow: rgba(99, 99, 99, 0.3) 0px 2px 8px 0px;
+  box-shadow: var(--shadow);
 
   backface-visibility: hidden;
   cursor: pointer;
