--- a/src/components/CardMenu/CardMenu.module.css
+++ b/src/components/CardMenu/CardMenu.module.css
@@ -1,17 +1,14 @@
 .menu {
   position: fixed;
   z-index: 2;
-
   display: flex;
   justify-content: space-between;
   column-gap: 15px;
-
   background: var(--background-color);
   padding: 10px;
   border-radius: 10px;
   border: 2px solid rgba(0, 0, 0, 0.02);
-  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-
+  box-shadow: var(--shadow);
   animation: scaleIn 0.3s ease forwards;
 }
 
@@ -32,7 +29,7 @@ button {
   padding: 6px;
   border-radius: 8px;
   cursor: pointer;
-  box-shadow: rgba(99, 99, 99, 0.3) 0px 2px 8px 0px;
+  box-shadow: var(--shadow);
 }
 
 .icon {
