--- a/src/components/Bingo/Bingo.module.css
+++ b/src/components/Bingo/Bingo.module.css
@@ -1,4 +1,3 @@
-/* layout */
 .container {
   position: relative;
   display: flex;
@@ -12,7 +11,7 @@
 .overlay {
   position: absolute;
   inset: 0;
-  background-color: rgba(0, 0, 0, 0);
+  background-color: transparent;
   z-index: 1;
 }
 
