--- a/src/components/Card/Sides/CardBack/CardBack.module.css
+++ b/src/components/Card/Sides/CardBack/CardBack.module.css
@@ -12,15 +12,12 @@
 .input {
   width: 100%;
   padding: 12px 16px;
-
   font-size: 16px;
   outline: none;
-
   background: #fff;
   border-radius: 16px;
   border: 2px solid rgba(0, 0, 0, 0.03);
-
-  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  box-shadow: var(--shadow);
 
   &::placeholder {
     color: var(--accent-color);
