--- a/src/components/Bingo/Bingo.module.css
+++ b/src/components/Bingo/Bingo.module.css
@@ -11,8 +11,19 @@
 .overlay {
   position: absolute;
   inset: 0;
-  background-color: transparent;
+  backdrop-filter: blur(2px);
   z-index: 1;
+
+  animation: overlayIn 0.3s ease forwards;
+}
+
+@keyframes overlayIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 .cardsGrid {
