--- a/src/components/Bingo/Bingo.module.css
+++ b/src/components/Bingo/Bingo.module.css
@@ -2,52 +2,8 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  width: 1366px;
-  height: 1024px;
+  width: var(--containerWidth);
+  height: var(--containerHeight);
   padding: 30px;
   background-color: var(--background-color);
-}
-
-.overlay {
-  position: absolute;
-  inset: 0;
-  backdrop-filter: blur(2px);
-  z-index: 1;
-
-  animation: overlayIn 0.3s ease forwards;
-}
-
-@keyframes overlayIn {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
-
-.cardsGrid {
-  width: 100%;
-  height: 100%;
-  margin-top: 30px;
-  display: grid;
-  flex: 1;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(4, 1fr);
-  gap: 20px;
-}
-
-/* card "ease in" animation */
-.cardEaseIn {
-  animation: cardIn 0.3s ease forwards;
-  transform-origin: center;
-}
-
-@keyframes cardIn {
-  from {
-    transform: scale(0);
-  }
-  to {
-    transform: scale(1);
-  }
 }
