--- a/src/pages/Auth/Auth.module.css
+++ b/src/pages/Auth/Auth.module.css
@@ -16,6 +16,7 @@
   background: #131313;
   border-radius: 24px;
   overflow: hidden;
+  box-shadow: var(--shadow);
 }
 
 .left {
@@ -33,6 +34,7 @@
   background: url('/bingo-2.gif') center/cover no-repeat;
   width: 100%;
   height: 100%;
+  border-radius: 16px;
 }
 
 /* slide анимация */
