--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -1,18 +1,14 @@
 .card {
   position: relative;
-  width: 100%;
-  height: 100%;
+  aspect-ratio: 5 / 3;
   perspective: 1000px;
-  user-select: none;
 }
 
 .inner {
   width: 100%;
   height: 100%;
-  position: relative;
-
+  transition: transform 0.6s;
   transform-style: preserve-3d;
-  transition: transform 0.3s ease;
 }
 
 /* flip animation */
