--- a/src/components/CardsGrid/CardsGrid.module.scss
+++ b/src/components/CardsGrid/CardsGrid.module.scss
@@ -1,12 +1,16 @@
 .cardsGrid {
-  width: 100%;
-  height: 100%;
-  margin-top: 30px;
   display: grid;
-  flex: 1;
   grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(4, 1fr);
-  gap: 20px;
+  gap: rem(25);
+
+  @include laptop {
+    gap: rem(15);
+  }
+
+  @include mobile {
+    grid-template-columns: repeat(2, 1fr);
+    gap: rem(10);
+  }
 }
 
 /* card "ease in" animation */
