--- a/src/components/Title/Title.module.scss
+++ b/src/components/Title/Title.module.scss
@@ -1,15 +1,20 @@
 .wrapper {
   display: flex;
   justify-content: center;
+
+  padding-bottom: rem(30);
+
+  @include mobile {
+    padding-bottom: rem(15);
+  }
 }
 
-.input {
+.titleInput {
+  @include fluid-text(80, 30);
   text-transform: uppercase;
-  font-size: 85px;
   font-weight: 800;
   text-align: center;
   font-family: 'Jost', sans-serif;
-
   border: none;
   outline: none;
   background: transparent;
