--- a/src/components/Card/Surface/CardSurface.module.scss
+++ b/src/components/Card/Surface/CardSurface.module.scss
@@ -15,6 +15,7 @@
 
   @include mobile {
     padding: rem(10);
-    border: rem(3) solid rgba(0, 0, 0, 0.05);
+    border: rem(2) solid rgba(0, 0, 0, 0.05);
+    box-shadow: rgba(99, 99, 99, 0.1) 0 2px 8px 0;
   }
 }
