--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -8,16 +8,16 @@
   color: var(--background-color);
 }
 
+html,
+body,
 #root {
   display: flex;
   justify-content: center;
+  width: 100%;
   height: 100%;
 }
 
 body {
-  display: grid;
-  align-items: center;
-
   -webkit-user-select: none;
   user-select: none;
   touch-action: manipulation;
