--- a/src/components/Title/Title.module.scss
+++ b/src/components/Title/Title.module.scss
@@ -1,7 +1,4 @@
 .wrapper {
-  display: flex;
-  justify-content: center;
-
   padding-bottom: rem(30);
 
   @include mobile {
@@ -10,6 +7,7 @@
 }
 
 .titleInput {
+  width: 100%;
   font-size: rem(80);
   text-transform: uppercase;
   font-weight: 800;
