--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -23,10 +23,10 @@ body {
 }
 
 #root {
+  display: flex;
+  justify-content: center;
   width: 100%;
   min-height: 100%;
-  display: flex;
-  flex-direction: column;
 }
 
 body {
