--- a/src/components/Card/Sides/CardBack/CardBack.module.scss
+++ b/src/components/Card/Sides/CardBack/CardBack.module.scss
@@ -3,21 +3,24 @@
 }
 
 .form {
-  display: flex;
-  flex-direction: column;
   width: 100%;
-  gap: 10px;
 }
 
 .input {
+  font-size: rem(20);
   width: 100%;
-  padding: 12px 16px;
-  font-size: 16px;
+  padding: rem(20) rem(16);
   outline: none;
   background: #fff;
-  border-radius: 16px;
-  border: 2px solid rgba(0, 0, 0, 0.03);
+  border-radius: rem(14);
+  border: rem(2) solid rgba(0, 0, 0, 0.03);
   box-shadow: var(--shadow);
+
+  @include mobile {
+    padding: rem(10);
+    border-radius: rem(12);
+    font-size: rem(12);
+  }
 
   &::placeholder {
     color: var(--accent-color);
