--- a/src/components/UI/BurgerButton/BurgerButton.module.scss
+++ b/src/components/UI/BurgerButton/BurgerButton.module.scss
@@ -7,7 +7,6 @@
   padding: 0;
 
   @include flex-center;
-  @include square(rem(30));
   transition-duration: 0.3s;
 
   &:disabled {
@@ -17,11 +16,13 @@
 }
 
 .burgerButton svg {
-  width: 40px;
-  height: 40px;
+  @include square(rem(40));
+
+  @include ipadPro {
+    @include square(rem(35));
+  }
 
   @include mobile {
-    width: 20px;
-    height: 20px;
+    @include square(rem(30));
   }
 }
