--- a/src/pages/Auth/AuthForm.module.scss
+++ b/src/pages/Auth/AuthForm.module.scss
@@ -3,17 +3,25 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  gap: 20px;
+  gap: rem(20);
   color: #fff;
+
+  @include mobile {
+    gap: rem(16);
+  }
 }
 
 .title {
-  font-size: 40px;
+  font-size: rem(40);
   font-weight: 700;
+
+  @include mobile {
+    font-size: rem(30);
+  }
 }
 
 .subtitle {
-  font-size: 16px;
+  font-size: rem(16);
   opacity: 0.9;
 }
 
@@ -25,13 +33,13 @@
 
 .input {
   max-width: 360px;
-  padding: 14px 18px;
-  border-radius: 12px;
+  padding: rem(14) rem(18);
+  border-radius: rem(12);
 
-  border: 2px solid transparent;
+  border: rem(2) solid transparent;
   background: #2f2f37;
 
-  font-size: 16px;
+  font-size: rem(16);
   color: white;
 
   transition: border-color 0.2s ease;
@@ -43,15 +51,15 @@
 }
 
 .button {
-  margin-top: 12px;
-  padding: 14px;
+  margin-top: rem(12);
+  padding: rem(14);
   width: 100%;
   border: none;
   background: var(--background-color);
   color: var(--accent-color);
-  font-size: 16px;
+  font-size: rem(16);
   font-weight: 600;
-  border-radius: 12px;
+  border-radius: rem(12);
   cursor: pointer;
   box-shadow: none;
 
