--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,8 +1,12 @@
 :root {
+  --container-maxWidth: 1400px;
+
   --accent-color: black;
-  --color-1: #d3cce3;
-  --background-color: linear-gradient(to right, #d3cce3, #e9e4f0);
+  --background-color: #ffde21;
   --shadow: rgba(99, 99, 99, 0.3) 0 2px 8px 0;
+
+  --ipadProW: 1366px;
+  --ipadProH: 1024px;
 }
 
 //linear-gradient(to right, #ee9ca7, #ffdde1);
