Add skeleton loader and fix full responsive layout: - Made header sticky - Adjusted burger button sizes - Fixed title scaling - Tuned layout for iPad Pro 12.9 - Added responsive styles for Auth page - Implemented iOS-style sliding sidebar

--- a/src/components/Card/CardSkeleton/CardSkeleton.module.scss
+++ b/src/components/Card/CardSkeleton/CardSkeleton.module.scss
@@ -9,9 +9,9 @@
   animation-iteration-count: infinite;
   background: linear-gradient(
     90deg,
-    #f8f8f8 0,
-    #e8e8e8 rem(500),
-    #f8f8f8 rem(1000)
+    var(--background-color) 0,
+    var(--accent-color-3) rem(500),
+    var(--background-color) rem(1000)
   );
   background-size: rem(1000);
 
