--- a/src/components/CardMenu/CardMenu.module.scss
+++ b/src/components/CardMenu/CardMenu.module.scss
@@ -38,6 +38,7 @@
 
   border: none;
   background: #fff;
+  color: var(--font-color);
   padding: rem(6);
   border-radius: rem(8);
   cursor: pointer;
