--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,10 +1,10 @@
 ::selection {
-  background: var(--accent-color);
+  background: var(--font-color);
   color: var(--background-color);
 }
 
 ::-moz-selection {
-  background: var(--accent-color);
+  background: var(--font-color);
   color: var(--background-color);
 }
 
