--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -2,11 +2,14 @@
   --container-maxWidth: 1400px;
 
   --accent-color: black;
+  --accent-color-2: black;
+  --accent-color-3: white;
+
+  --authInput: #2f2f37;
   --background-color: #ffde21;
+  --font-color: black;
   --shadow: rgba(99, 99, 99, 0.3) 0 2px 8px 0;
 
   --ipadProW: 1366px;
   --ipadProH: 1024px;
 }
-
-//linear-gradient(to right, #ee9ca7, #ffdde1);
