--- a/src/pages/Auth/Auth.module.scss
+++ b/src/pages/Auth/Auth.module.scss
@@ -8,7 +8,7 @@
   width: 1100px;
   height: 600px;
   padding: rem(40);
-  background: var(--accent-color);
+  background: var(--accent-color-2);
   border-radius: rem(24);
   overflow: hidden;
 
