--- a/src/styles/normalize.css
+++ b/src/styles/normalize.css
@@ -1,7 +1,7 @@
 * {
+  outline: none;
   -webkit-tap-highlight-color: transparent;
   -webkit-touch-callout: none; /* отключает всплывающее меню при удержании */
-  outline: none;
 }
 
 /**
@@ -43,9 +43,9 @@ body,
 }
 
 :where(fieldset[class]) {
+  border: none;
   margin-left: 0;
   padding: 0;
-  border: none;
 }
 
 /**
@@ -75,7 +75,7 @@ p {
   Внешний отступ вниз для параграфа без атрибута class,
   который расположен не последним среди своих соседних элементов
  */
-:where(p:not([class]):not(:last-child)) {
+:where(p:not([class], :last-child)) {
   margin-bottom: var(--paragraphMarginBottom);
 }
 
@@ -85,8 +85,8 @@ p {
 img,
 video {
   display: block;
-  max-width: 100%;
   height: auto;
+  max-width: 100%;
 }
 
 /**
@@ -105,6 +105,7 @@ html {
     (когда, например, нужно будет "прижать" футер к низу сайта)
    */
   height: 100%;
+
   /**
     Убираем скачок интерфейса по горизонтали
     при появлении / исчезновении скроллбара
@@ -122,14 +123,15 @@ html,
 
 body {
   /**
+    Унифицированный интерлиньяж
+   */
+  line-height: 1.5;
+
+  /**
     Пригодится в большинстве ситуаций
     (когда, например, нужно будет "прижать" футер к низу сайта)
    */
   min-height: 100%;
-  /**
-    Унифицированный интерлиньяж
-   */
-  line-height: 1.5;
 }
 
 /**
@@ -153,7 +155,7 @@ label {
   атрибут fill со значением 'none' или начинается с 'url')
  */
 :where([fill]:not([fill='none'], [fill^='url'])) {
-  fill: currentColor;
+  fill: currentcolor;
 }
 
 /**
@@ -162,7 +164,7 @@ label {
   атрибут stroke со значением 'none')
  */
 :where([stroke]:not([stroke='none'], [stroke^='url'])) {
-  stroke: currentColor;
+  stroke: currentcolor;
 }
 
 /**
@@ -177,7 +179,7 @@ svg * {
  */
 :where(table) {
   border-collapse: collapse;
-  border-color: currentColor;
+  border-color: currentcolor;
 }
 
 /**
@@ -190,7 +192,7 @@ svg * {
   ::after {
     animation-duration: 0.01ms !important;
     animation-iteration-count: 1 !important;
-    transition-duration: 0.01ms !important;
     scroll-behavior: auto !important;
+    transition-duration: 0.01ms !important;
   }
 }
