--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,15 +1,12 @@
 :root {
   --container-maxWidth: 1400px;
-
   --accent-color: black;
   --accent-color-2: black;
   --accent-color-3: white;
-
   --authInput: #2f2f37;
   --background-color: #ffde21;
   --font-color: black;
-  --shadow: rgba(99, 99, 99, 0.3) 0 2px 8px 0;
-
+  --shadow: rgb(99 99 99 / 30%) 0 2px 8px 0;
   --ipadProW: 1366px;
   --ipadProH: 1024px;
 }
