--- a/src/components/Card/Sides/CardBack.module.scss
+++ b/src/components/Card/Sides/CardBack.module.scss
@@ -7,19 +7,23 @@
 }
 
 .input {
-  font-size: rem(20);
   width: 100%;
   padding: rem(20) rem(16);
-  outline: none;
+
+  font-size: rem(20);
+
   background: #fff;
+  border: rem(2) solid rgb(0 0 0 / 3%);
   border-radius: rem(14);
-  border: rem(2) solid rgba(0, 0, 0, 0.03);
+  outline: none;
   box-shadow: var(--shadow);
 
   @include mobile {
     padding: rem(10);
-    border-radius: rem(12);
+
     font-size: rem(16);
+
+    border-radius: rem(12);
   }
 
   &::placeholder {
