--- a/src/components/Card/Surface/CardSurface.module.scss
+++ b/src/components/Card/Surface/CardSurface.module.scss
@@ -1,22 +1,24 @@
 .surface {
   position: absolute;
-  inset: 0;
+
   padding: rem(20);
+
+  color: var(--accent-color);
+
+  background: var(--accent-color-3);
+  border: rem(6) solid rgb(0 0 0 / 10%);
+  border-radius: rem(16);
+  box-shadow: var(--shadow);
+  backface-visibility: hidden;
+  cursor: pointer;
+  inset: 0;
 
   @include flex-center;
 
-  color: var(--accent-color);
-  background: var(--accent-color-3);
-  border-radius: rem(16);
-  border: rem(6) solid rgba(0, 0, 0, 0.1);
-  box-shadow: var(--shadow);
-
-  backface-visibility: hidden;
-  cursor: pointer;
-
   @include mobile {
     padding: rem(10);
-    border: rem(3) solid rgba(0, 0, 0, 0.1);
-    box-shadow: rgba(99, 99, 99, 0.1) 0 2px 8px 0;
+
+    border: rem(3) solid rgb(0 0 0 / 10%);
+    box-shadow: rgb(99 99 99 / 10%) 0 2px 8px 0;
   }
 }
