--- a/src/components/CardMenu/CardMenu.module.scss
+++ b/src/components/CardMenu/CardMenu.module.scss
@@ -1,33 +1,40 @@
 .menu {
   position: fixed;
   z-index: 2000;
+
   display: flex;
   justify-content: space-between;
-  column-gap: rem(15);
-  background: var(--background-color);
   padding: rem(10);
+
+  column-gap: rem(15);
+
+  background: var(--background-color);
   border-radius: rem(12);
   box-shadow: var(--shadow);
+  transform: translate(-50%, -50%) scale(0);
+
+  transition: opacity 0.3s ease,
+  visibility 0.3s ease,
+  transform 0.3s ease,
+  left 0s,
+  top 0s;
+
+  pointer-events: none;
 
   @include hide;
-  pointer-events: none;
-  transform: translate(-50%, -50%) scale(0);
-  transition:
-    opacity 0.3s ease,
-    visibility 0.3s ease,
-    transform 0.3s ease,
-    left 0s,
-    top 0s;
 
   &.open {
     @include show;
     transform: translate(-50%, -50%) scale(1);
+
     pointer-events: auto;
   }
 
   @include mobile {
-    column-gap: rem(6);
     padding: rem(10);
+
+    column-gap: rem(6);
+
     border-radius: rem(10);
   }
 }
@@ -35,14 +42,15 @@
 .icon {
   @include flex-center;
   @include square(rem(55));
-
-  border: none;
-  background: #fff;
-  color: var(--font-color);
   padding: rem(6);
+
+  color: var(--font-color);
+
+  background: #fff;
+  border: none;
   border-radius: rem(8);
-  cursor: pointer;
   box-shadow: var(--shadow);
+  cursor: pointer;
 
   @include mobile {
     @include square(rem(34));
@@ -61,15 +69,19 @@
 
 .backdrop {
   position: fixed;
-  inset: 0;
-  backdrop-filter: blur(5px);
-  opacity: 0;
-  pointer-events: none;
-  transition: opacity 0.3s ease;
   z-index: 1500;
+
+  opacity: 0;
+  backdrop-filter: blur(5px);
+
+  transition: opacity 0.3s ease;
+
+  pointer-events: none;
+  inset: 0;
 
   &.open {
     opacity: 1;
+
     pointer-events: all;
   }
 }
