--- a/src/components/Sidebar/Sidebar.module.scss
+++ b/src/components/Sidebar/Sidebar.module.scss
@@ -2,68 +2,72 @@
   position: absolute;
   top: calc(100% + rem(20));
   right: rem(20);
+  z-index: 2000;
 
   display: flex;
   flex-direction: column;
-
+  
   width: rem(300);
-  aspect-ratio: 1;
 
   background: var(--accent-color-3);
-  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-
   border-radius: rem(10);
-
-  z-index: 2000;
-
+  box-shadow: rgb(100 100 111 / 20%) 0 7px 29px 0;
   transform: scale(0);
   transform-origin: top right;
   opacity: 0;
+
+  transition: transform 0.25s ease,
+  opacity 0.25s ease;
+
   pointer-events: none;
-  transition:
-    transform 0.25s ease,
-    opacity 0.25s ease;
+  aspect-ratio: 1;
 
   @include mobile {
     right: 0;
+
     width: rem(220);
   }
 
   &.open {
     transform: scale(1);
     opacity: 1;
+
     pointer-events: auto;
   }
 }
 
 .backdrop {
   position: fixed;
-  inset: 0;
-  backdrop-filter: blur(5px);
-  opacity: 0;
-  pointer-events: none;
-  transition: opacity 0.3s ease;
   z-index: 1500;
+
+  opacity: 0;
+  backdrop-filter: blur(5px);
+
+  transition: opacity 0.3s ease;
+
+  pointer-events: none;
+  inset: 0;
 
   &.open {
     opacity: 1;
+
     pointer-events: all;
   }
 }
 
 .button {
   display: flex;
-  justify-content: space-between;
   align-items: center;
-
+  justify-content: space-between;
   padding: rem(14) rem(18);
 
-  font-weight: 400;
   color: var(--accent-color-2);
+  font-weight: 400;
+
+  border-bottom: rem(5) solid #e8e8e8;
+  border-radius: 0;
 
   @include fluid-text(20, 14);
-  border-radius: 0;
-  border-bottom: rem(5) solid #e8e8e8;
 
   @include mobile {
     padding: rem(8) rem(14);
