--- a/src/components/UI/Overlay/Overlay.module.scss
+++ b/src/components/UI/Overlay/Overlay.module.scss
@@ -1,15 +1,20 @@
 .overlay {
   position: fixed;
+  z-index: 2000;
+
   width: 100%;
   height: 100%;
-  inset: 0;
-  background: rgba(0, 0, 0, 0);
-  pointer-events: none;
+
+  background: rgb(0 0 0 / 0%);
+
   transition: background 0.25s ease;
-  z-index: 2000;
+
+  pointer-events: none;
+  inset: 0;
 }
 
 .open {
-  background: rgba(0, 0, 0, 0.45);
+  background: rgb(0 0 0 / 45%);
+
   pointer-events: auto;
 }
