--- a/src/pages/Bingo/Bingo.module.scss
+++ b/src/pages/Bingo/Bingo.module.scss
@@ -1,9 +1,7 @@
 .bingo {
+  @include flex-center;
+
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
 }
 
 .container {
