--- a/src/styles/helpers/mixins.scss
+++ b/src/styles/helpers/mixins.scss
@@ -5,29 +5,30 @@
 }
 
 @mixin hide {
-  opacity: 0;
   visibility: hidden;
+  opacity: 0;
 }
 
 @mixin show {
-  opacity: 1;
   visibility: visible;
+  opacity: 1;
 }
 
 @mixin flex-center($isInline: false) {
-  @if ($isInline) {
+  @if $isInline {
     display: inline-flex;
   } @else {
     display: flex;
   }
 
-  justify-content: center;
   align-items: center;
+  justify-content: center;
 }
 
 @mixin abs-cover {
-  position: absolute;
   inset: 0;
+
+  position: absolute;
 }
 
 @mixin abs-center {
@@ -56,24 +57,29 @@
 
 @mixin visually-hidden {
   position: absolute !important;
+
   width: 1px !important;
   height: 1px !important;
   margin: -1px !important;
-  border: 0 !important;
   padding: 0 !important;
-  white-space: nowrap !important;
-  clip-path: inset(100%) !important;
-  clip: rect(0 0 0 0) !important;
   overflow: hidden !important;
+
+  white-space: nowrap !important;
+
+  border: 0 !important;
+
+  clip: rect(0 0 0 0) !important;
+  clip-path: inset(100%) !important;
 }
 
 @mixin focus-visible {
   outline: 2px dashed var(--color-white);
   outline-offset: 4px;
+
   transition-duration: 0s !important;
 }
 
 @mixin disabled {
-  opacity: 0.5;
   cursor: not-allowed;
+  opacity: 0.5;
 }
