--- a/src/components/Sidebar/Sidebar.module.scss
+++ b/src/components/Sidebar/Sidebar.module.scss
@@ -6,7 +6,7 @@
 
   display: flex;
   flex-direction: column;
-  
+
   width: rem(300);
 
   background: var(--accent-color-3);
@@ -16,8 +16,9 @@
   transform-origin: top right;
   opacity: 0;
 
-  transition: transform 0.25s ease,
-  opacity 0.25s ease;
+  transition:
+    transform 0.25s ease,
+    opacity 0.25s ease;
 
   pointer-events: none;
   aspect-ratio: 1;
@@ -37,22 +38,7 @@
 }
 
 .backdrop {
-  position: fixed;
-  z-index: 1500;
-
-  opacity: 0;
-  backdrop-filter: blur(5px);
-
-  transition: opacity 0.3s ease;
-
-  pointer-events: none;
-  inset: 0;
-
-  &.open {
-    opacity: 1;
-
-    pointer-events: all;
-  }
+  @include overlay;
 }
 
 .button {
