--- a/src/styles/helpers/mixins.scss
+++ b/src/styles/helpers/mixins.scss
@@ -83,3 +83,24 @@
   cursor: not-allowed;
   opacity: 0.5;
 }
+
+@mixin overlay {
+  position: fixed;
+  z-index: 1500;
+
+  opacity: 0;
+  backdrop-filter: blur(5px);
+
+  transition: opacity 0.3s ease;
+
+  user-select: none;
+
+  pointer-events: none;
+  inset: 0;
+
+  &.open {
+    opacity: 1;
+
+    pointer-events: all;
+  }
+}
