--- a/src/components/Card/Sides/CardReady.module.scss
+++ b/src/components/Card/Sides/CardReady.module.scss
@@ -27,9 +27,20 @@
   text-align: center;
   overflow-wrap: break-word;
 
+  user-select: none;
+
+  @include laptop {
+    font-size: rem(17);
+  }
 
   @include mobile {
-    font-size: rem(14);
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+
+    overflow: hidden;
+
+    font-size: rem(13);
   }
 }
 
@@ -39,7 +50,9 @@
   font-size: rem(20);
   letter-spacing: rem(2);
 
+  user-select: none;
+
   @include mobile {
-    font-size: rem(14);
+    font-size: rem(13);
   }
 }
